--- a/src/components/Form/styles.scss
+++ b/src/components/Form/styles.scss
@@ -25,7 +25,10 @@
   }
   select {
     height: 100%;
+    color: #8a8a8a;
+    font-weight: bold;
     width: 100%;
+    font-size: 15px;
     margin: 0px 2rem;
     border: none;
     outline: none;
